added draft of the 2024 program

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
           <!-- Schdule Day 1 -->
-          <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:00 AM</time></div>
+              <div class="col-md-2"><time>09:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Welcoming, coffee and delicacies">
@@ -289,84 +289,73 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:45 AM</time></div>
+              <div class="col-md-2"><time>09:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/RB.jpeg" alt="Mathieu Gilson, David Meunier, Ruggero Basanisi">
+                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
                 </div>
                 <h4>Introduction to BrainHack<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
-                <p>Introduction to BrainHack Lucca</p>
+                <p>Introduction to BrainHack Lucca 2024</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>09:45</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Ruggero Basanisi">
+                  <img src="images/program/training.gif" alt="Fabio Pinelli">
                 </div>
-                <h4>Let's get started to BrainHack<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
-                <p>Useful resources to survive BrainHack Lucca 2024</p>
+                <h4>Training: Python basics<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
+                <p>Useful resources to approach to Python programming</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:30 AM</time></div>
+              <div class="col-md-2"><time>11:15</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
+                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
                 </div>
-                <h4>Python basics<span> - Fabio Pinelli</span></h4>
-                <p>Jupyter Notebook</p>
+                <h4>Training: Going on with Python<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
+                <p>Exploring useful libraries for Python programming</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:15 AM</time></div>
+              <div class="col-md-2"><time>12:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
+                  <img src="images/program/ML.jpg" alt="Matteo Lionello">
                 </div>
-                <h4>Training session 3<span> - CEDRE Team</span></h4>
-                <p>AI tools for machine learning</p>
+                <h4>Training: Git & GitHub<span> - Matteo Lionello (Lucca, IMT)</span></h4>
+                <p>How to keep track of code changes and boost collaboration</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00 PM</time></div>
+              <div class="col-md-2"><time>13:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'</p>
+                <!-- <p>Lunch will be served at 'Marameo'</p> -->
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:00 PM</time></div>
+              <div class="col-md-2"><time>14:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
+                  <img src="images/program/GH.jpg" alt="Giacomo Handjaras">
                 </div>
-                <h4>Sharing expertise<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
-                <p><a href="https://docs.google.com/presentation/d/1PC12aUREXt-h4GnVK_56bzBGjaLda3z8HRGiXUdhf04/edit?usp=sharing" target="_blank">How to 'Git' on with a clean code</a></p>
+                <h4>Training: Tools for MRI processing<span> - Giacomo Handjaras (Lucca, IMT)</span></h4>
+                <p>How to manage and process MRI data</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:40 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/person.png" alt="Speaker to define">
-                </div>
-                <h4>Sharing expertise<span> - Marmaduke Woodman (AMU, INS), Manuel Mercier (AMU, INS) & Julien Lefevre (AMU, INT)</span></h4>
-                <p>Programming, energy and environement, does 'green-coding' exist?</p>
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>15:20 PM</time></div>
+              <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE">
@@ -377,57 +366,46 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>15:50 PM</time></div>
+              <div class="col-md-2"><time>16:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/Felix-Hoffstaedter.jpg" alt="Speaker to define">
+                  <img src="images/program/training.gif" alt="Speaker to define">
                 </div>
-                <h4>Sharing expertise<span> - Felix Hoffstaedter (Julich, BABS)</span></h4>
-                <p>Open-source projects</p>
+                <h4>Training<span> - ToDefine</span></h4>
+                <p>Calendar will be updated soon</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:30 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/cohenadad.png" alt="Speaker to define">
-                </div>
-                <h4>Sharing expertise<span> - Julien Cohen-Adad (Montreal, Polytech)</span></h4>
-                <p>Open-source projects</p>
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>17:10 PM</time></div>
+              <div class="col-md-2"><time>17:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/project.jpg" alt="Projects' Presentation">
                 </div>
                 <h4>Projects pitches<span> - Projects leaders</span></h4>
-                <p>Short projects presentations between Marseille and Lucca</p>
+                <p>Short presentations of the available projects</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>18:00 PM</time></div>
+              <div class="col-md-2"><time>18:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/networking.gif" alt="Willow Trantow">
+                  <img src="images/program/networking.gif" alt="Party!">
                 </div>
                 <h4>Social Night Event<span> - All the Brainhackers</span></h4>
                 <p>The social night event will be hosted in IMT school</p>
               </div>
             </div>
 
-          </div> -->
+          </div>
           <!-- End Schdule Day 1 -->
 
           <!-- Schdule Day 2 -->
-          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
+          <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:00 AM</time></div>
+              <div class="col-md-2"><time>09:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
@@ -438,7 +416,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -449,18 +427,18 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00 AM</time></div>
+              <div class="col-md-2"><time>13:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'</p>
+                <!-- <p>Lunch will be served at 'Marameo'</p> -->
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:30 AM</time></div>
+              <div class="col-md-2"><time>14:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -471,7 +449,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:30 PM</time></div>
+              <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
@@ -482,6 +460,17 @@
             </div>
 
             <div class="row schedule-item">
+              <div class="col-md-2"><time>16:00</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/hack.gif" alt="Hack those brains!">
+                </div>
+                <h4>Hacking session<span> - Working groups</span></h4>
+                <p>Collective work on projects!</p>
+              </div>
+            </div>
+
+            <!-- <div class="row schedule-item">
               <div class="col-md-2"><time>17:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -490,16 +479,16 @@
                 <h4>Intermediate projects presentation<span> - Projects Leaders</span></h4>
                 <p>Small intermediate presentation by project leaders in Marseille and Lucca</p>
               </div>
-            </div>
+            </div> -->
 
-          </div> -->
+          </div>
           <!-- End Schdule Day 2 -->
 
           <!-- Schdule Day 3 -->
-          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:00 AM</time></div>
+              <div class="col-md-2"><time>09:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
@@ -510,7 +499,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -521,18 +510,18 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00 AM</time></div>
+              <div class="col-md-2"><time>13:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'<p>
+                <!-- <p>Lunch will be served at 'Marameo'<p> -->
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:30 AM</time></div>
+              <div class="col-md-2"><time>14:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -543,7 +532,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:30 PM</time></div>
+              <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
@@ -554,6 +543,17 @@
             </div>
 
             <div class="row schedule-item">
+              <div class="col-md-2"><time>16:00</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/hack.gif" alt="Hack those brains!">
+                </div>
+                <h4>Hacking session<span> - Group Work</span></h4>
+                <p>Collective work on projects!</p>
+              </div>
+            </div>
+
+            <!-- <div class="row schedule-item">
               <div class="col-md-2"><time>17:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -562,16 +562,16 @@
                 <h4>BrainHack Marseille Wrapup / BrainHack Lucca intermediate presentation<span> - Projects Leaders</span></h4>
                 <p>To share the results of BrainHack Marseille and the preliminar results of BrainHack Lucca</p>
               </div>
-            </div>
+            </div> -->
 
-          </div> -->
+          </div>
           <!-- End Schdule Day 3 -->
 
           <!-- Schdule Day 4 -->
-          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:00 AM</time></div>
+              <div class="col-md-2"><time>09:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
@@ -582,7 +582,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -593,18 +593,18 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00 AM</time></div>
+              <div class="col-md-2"><time>13:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'</p>
+                <!-- <p>Lunch will be served at 'Marameo'</p> -->
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:30 AM</time></div>
+              <div class="col-md-2"><time>14:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -615,7 +615,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:30 PM</time></div>
+              <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
@@ -626,17 +626,28 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>17:00 PM</time></div>
+              <div class="col-md-2"><time>16:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/project.jpg" alt="Speaker to define">
+                  <img src="images/program/training.gif" alt="Hack those brains!">
                 </div>
-                <h4>BrainHack Lucca Wrapup<span> - Projects Leaders</span></h4>
-                <p>Presentation of the results of BrainHack Lucca projects.</p>
+                <h4>Slides preparation<span> - Group Work</span></h4>
+                <p>Finish the figures and prepare a few slides</p>
               </div>
             </div>
 
-          </div> -->
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>17:00</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/project.jpg" alt="All">
+                </div>
+                <h4>BrainHack Lucca Wrapup<span> - All the BrainHackers</span></h4>
+                <p>Presentation of the results of BrainHack Lucca projects</p>
+              </div>
+            </div>
+
+          </div>
           <!-- End Schdule Day 4 -->
 
         </div>
