--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <div class="row">
           <div class="col-xl-5 col-lg-5 hero-img" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/logo/BHLucca.png" alt="BrainHack Lucca">
+            <img src="images/logo/BHL2024.png" alt="BrainHack Lucca">
           </div>
         </div>
 
@@ -966,22 +966,21 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
               <img src="images/team/LS.png" class="img-fluid" alt="">
               <div class="social">
-                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a> -->
+                <a href="#"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
               <h4>Leila Salvesen</h4>
               <span>PhD Student</span>
-              <!-- <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p> -->
             </div>
-          </div><!-- End Team Member -->
+          </div> --><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
