correction on registration

--- a/index.html
+++ b/index.html
@@ -707,10 +707,10 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
-        <!-- <p>Registration <b>is now open!</b></p> -->
-        <!-- <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p> -->
-        <!-- <p>Registration will be <b>open until 20/11/2023</b>.</p> -->
         <p>Registration <b>is now open!</b></p>
+        <!-- <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p> -->
+        <p>Registration will be <b>open until 25/11/2023</b>.</p>
+        <!-- <p>Registration <b>is now closed.</b></p> -->
         <!-- <p>Email us if you want to try to get a late registration.</p> -->
       </div><!-- End Section Title -->
 
