updated program section

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <!--  Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Program</h2>
-          <p><b>IMPORTANT NOTICE</b>: we have run a satellite online short talk on how to write an efficient project for the BrainHack.<br> You can find the link to the video in the heading of the <a href="#projects"><b>Projects section</b></a></p>
+          <p><b>IMPORTANT NOTICE</b>: we recorded a short video on how to write an efficient project for the BrainHack.<br> You can find the link to the video in the heading of the <a href="#projects"><b>Projects section</b></a></p>
         </div><!-- End Section Title -->
 
         <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
@@ -347,10 +347,10 @@
               <div class="col-md-2"><time>14:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/GH.jpg" alt="Giacomo Handjaras">
+                  <img src="images/program/training.gif" alt="Fabio Pinelli">
                 </div>
-                <h4>Training: Tools for MRI processing<span> - Giacomo Handjaras (Lucca, IMT)</span></h4>
-                <p>How to manage and process MRI data</p>
+                <h4>Training: Machine learning with Python<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
+                <p>Introduction to machine learning basics using Python</p>
               </div>
             </div>
 
@@ -369,10 +369,10 @@
               <div class="col-md-2"><time>16:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
+                  <img src="images/program/GH.jpg" alt="Giacomo Handjaras">
                 </div>
-                <h4>Training<span> - ToDefine</span></h4>
-                <p>Calendar will be updated soon</p>
+                <h4>Training: Tools for MRI processing<span> - Giacomo Handjaras (Lucca, IMT)</span></h4>
+                <p>How to manage and process MRI data</p>
               </div>
             </div>
 
@@ -799,7 +799,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Projects</h2>
         <p>Here you can find all the informations about the proposed projects. <br>
-        If you want to submit a project you should first register, then follow the link to fill the form through a github issue.<br>
+        If you want to submit a project <b>you should first register</b>, then follow the link to fill the form through a github issue.
+        <br>
         Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this!</p>
         <p><b><a href="https://drive.google.com/file/d/1I8PQb1FDyXtRYeU_LaL7Nhab7dEzZdAo/view?usp=sharing" target="_blank">Click here to watch a short video about "How to write a project for the BrainHack"</a></b>, in which we discuss how a project should be conceived and project leaders' duties.</p>
       </div><!-- End Section Title -->
