--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   <img src="images/program/training.gif" alt="Fabio Pinelli">
                 </div>
                 <h4>Training: Python basics<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
-                <p>Useful resources to approach to Python programming</p>
+                <p>Brief Introduction to Python</p>
               </div>
             </div>
 
@@ -339,7 +339,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'</p> -->
+                <p>Lunch will be served at 'Marameo'</p>
               </div>
             </div>
 
@@ -349,7 +349,7 @@
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Fabio Pinelli">
                 </div>
-                <h4>Training: Machine learning with Python<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
+                <h4>Training: Machine learning with Python: an overview<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
                 <p>Introduction to machine learning basics using Python</p>
               </div>
             </div>
@@ -433,7 +433,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'</p> -->
+                <p>Lunch will be served at 'Marameo'</p>
               </div>
             </div>
 
@@ -516,7 +516,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'<p> -->
+                <p>Lunch will be served at 'Marameo'<p>
               </div>
             </div>
 
@@ -599,7 +599,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'</p> -->
+                <p>Lunch will be served at 'Marameo'</p>
               </div>
             </div>
 
