modified registration deadline and added contributors logos

--- a/index.html
+++ b/index.html
@@ -147,17 +147,51 @@
 
         <div class="row align-items-center justify-content-center">
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
-            <a href="https://momilab.imtlucca.it/research/semper" target="_blank">
-              <img src="images/contributors/semper.png" class="img-fluid" alt="SEMper">
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <a href="https://momilab.imtlucca.it/" target="_blank">
+              <img src="images/contributors/momilab.png" class="img-fluid" alt="MoMiLab">
             </a>
-          </div> --><!-- End Client Item -->
+          </div><!-- End Client Item -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://momilab.imtlucca.it/research/space" target="_blank">
               <img src="images/contributors/space.png" class="img-fluid" alt="SPACE">
             </a>
-          </div> --><!-- End Client Item -->
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <a href="https://momilab.imtlucca.it/research/semper" target="_blank">
+              <img src="images/contributors/semper.png" class="img-fluid" alt="SEMper">
+            </a>
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <a href="https://erc.europa.eu/homepage" target="_blank">
+              <img src="images/contributors/ERC.png" class="img-fluid" alt="European Research Council">
+            </a>
+          </div> <!-- End Client Item -->
+
+        </div>
+
+        <div class="row align-items-center justify-content-center">
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <a href="https://next-generation-eu.europa.eu/index_it" target="_blank">
+              <img src="images/contributors/IT_EU.png" class="img-fluid" alt="NextGenerationEU">
+            </a>
+          </div>
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <a href="https://www.mur.gov.it/it" target="_blank">
+              <img src="images/contributors/LOGO_UniversitaRicerca.jpg" class="img-fluid" alt="MUR">
+            </a>
+          </div>
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <a href="https://www.italiadomani.gov.it/content/sogei-ng/it/it/home.html" target="_blank">
+              <img src="images/contributors/italiadomani.jpg" class="img-fluid" alt="ItaliaDomani">
+            </a>
+          </div>
 
           <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
@@ -709,7 +743,7 @@
         <h2>Register</h2>
         <p>Registration <b>is now open!</b></p>
         <!-- <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p> -->
-        <p>Registration will be <b>open until 25/11/2023</b>.</p>
+        <p>Registration will be <b>open until 25/11/2024</b>.</p>
         <!-- <p>Registration <b>is now closed.</b></p> -->
         <!-- <p>Email us if you want to try to get a late registration.</p> -->
       </div><!-- End Section Title -->
