--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
                 <div class="speaker">
                   <img src="images/program/GH.jpg" alt="Giacomo Handjaras">
                 </div>
-                <h4>Training: Tools for MRI processing<span> - Giacomo Handjaras (Lucca, IMT)</span></h4>
-                <p>How to manage and process MRI data</p>
+                <h4>Training: Tools for fMRI processing<span> - Giacomo Handjaras (Lucca, IMT)</span></h4>
+                <p>How to manage and process fMRI data</p>
               </div>
             </div>
 
