--- a/index.html
+++ b/index.html
@@ -855,82 +855,93 @@
         <hr>
 
         <!--Project 1-->
-        <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+         <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
-            <img src="images/projects/project1.jpeg" class="img-fluid" alt="">
+            <img src="images/projects/project1.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/1" target="_blank">Brain-machine interface: a closed loop system for brain signal driven stimulation delivery.</a></h3>
-            <p>By Ruggero Basanisi & Monica Betta</p>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/9" target="_blank">Exploring How Music Shapes Emotions in the Brain. A network connectivity analysis perspective on fMRI data.</a></h3>
+            <p>By <a href="https://github.com/mlionello" target="_blank">Matteo Lionello</a></p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj1">Description</a>
 
             <div class="collapse" id='collapse_prj1'>
               <p>
                 <br>
-                Among other uses in neuroscience research, brain-machine interface systems are extensively used in sleep studies to deliver stimuli in response to the detection of salient brain signals (Bellesi et al. 2014, Fehér et al. 2021). In particular, we're interested in building a closed-loop protocol able to simultaneously register and monitor the EEG activity, recognize sleep slow waves (0.5 - 4 Hz), and deliver a stimulus with the finest possible time precision within a predetermined phase of the oscillation. The aim for the brainhack is to group together with different experts to tackle the deriving conceptual and computational issues, to finally create a publicly available small Python package containing a subset of functions to implement the closed-loop protocol.
+                Music has a unique ability to evoke emotions, but what’s actually happening in the brain when we feel something while listening to it? This project dives into that question using fMRI data from participants (25) listening to music during fMRI scans (2 runs 20mins each, total +5K timepoints). Some of the boring initial stuff has already been done! Brain data has already been preprocessed, and some cool features are already extracted from the music itself and available to play with - acoustic and spectral qualities, emotional cues, and deep features from a VGGish audio model.
                 <br>
+                Here’s what we want to do:
+                <ul>
+                  <li>Understand Brain Connectivity: Figure out which brain networks are involved in processing emotions while listening to music, and track how these networks change over time.</li>
+                  <li>Link Music Features to Brain Activity: Use machine learning and causal analysis to see how different music features (like tempo, spectral, and emotional feedbakcs patterns) impact brain connections and dynamics.</li>
+                </ul>
                 <br>
                 <b>Goals for the BrainHack:</b>
                 <br>
-                This project presents several non-trivial issues that should be addressed, during the brainhack we will mainly focus on three points:
                 <ul>
-                  <li>Chose and implementation of the algorithm for online slow wave detection</li>
-                  <li>Testing the slow wave detection algorithm on data (offline)</li>
-                  <li>Testing and improving the EEG algorithm for recording and monitoring brain signals, its integration with the detection algorithm and with stimulation delivery (online)</li>
+                  <li>Framework set up with fMRI data aligned to music features.</li>
+                  <li>Preliminary connectivity and feature-to-network mappings complete.</li>
+                  <li>Eye-catching visualizations, even if they’re just the beginning of the journey.</li>
                 </ul>
                 <b>Contributors' skills:</b>
                 <br>
-                Contributors can participate in different ways, helping us brainstorming on conceptual problems to figure out a valid strategy to achieve the scope, or actively programming algorithms and testing functions.Some of these skills can be useful to participate: EEG signal processing, machine/deep learning, python programming, control system.
+                <ul>
+                  <li>Matlab</li>
+                  <li>Basic fMRI data analysis knowledge</li>
+                </ul>
               </p>
             </div>
 
           </div>
-        </div> --><!-- Project Item LEFT-->
+        </div> <!-- Project Item LEFT -->
 
         <hr>
 
         <!--Project 2-->
-        <!-- <div class="row gy-4 align-items-center projects-item">
+         <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/2" target="_blank">NeuroInfer</a></h3>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/8" target="_blank">Functional MRI Analysis of Connectivity and Network Dynamics of central fatigue in Multiple Sclerosis disease</a></h3>
             <p>
-              by Davide Coraci & Matteo Lionello
+              by Alberto Benelli
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj2">Description</a>
 
             <div class="collapse" id='collapse_prj2'>
               <p>
                 <br>
-                NeuroInfer (NI) is a tool for drawing Bayesian inferences on the associations between cognitive processes and brain activations based on meta-analytic data from fMRI published studies. In a nutshell, it allows neuroscientists to interpret their results and assess the reliability of their hypotheses.
-                <br>
-                Compared to available tools (e.g., NeuroSynth, NeuroQuery, BACON), NI implements a more sophisticated Bayesian analysis (based on Bayesian confirmation theory).
-                Up to date, the NI framework includes a database of published fMRI studies and related metadata (updated in 2018 and shared with NeuroSynth and NeuroQuery), a vocabulary of terms, and a Python-based algorithm to perform the analysis.
+                Fatigue is a debilitating symptom of multiple sclerosis (MS), affecting over 80% of patients and significantly impairing their quality of life. Despite its prevalence, the neural mechanisms underlying fatigue in MS remain poorly understood. Functional magnetic resonance imaging (fMRI) offers a powerful tool to investigate the brain’s intrinsic connectivity and dynamic network behavior. This project aims to analyze fMRI time-series data to uncover differences in functional connectivity and network dynamics among MS patients with fatigue, MS patients without fatigue, and healthy controls. By identifying distinct connectivity patterns and their relationships with structural MRI findings, this study seeks to advance our understanding of MS-related fatigue and identify potential neuroimaging biomarkers.
                 <br>
                 <br>
                 <b>Goals for the BrainHack:</b>
                 <br>
-                Our goal for the Brainhack 2023 is to develop the NueroInfer platform. In particular, we plan:
                 <ul>
-                  <li>to improve the python-based script at the core of the current version of NI.</li>
-                  <li>to develop a GUI for NI</li>
-                  <li>to realize a beta version of NI to upload on GitHub (and provide some useful tutorial)</li>
+                  <li>Primary Objective: To investigate differences in functional connectivity and network dynamics among:</li>
+                    <ul>
+                      <li>MS patients with fatigue</li>
+                      <li>MS patients without fatigue</li>
+                      <li>Healthy controls</li>
+                    </ul>
+                  <li>Secondary Objectives:</li>
+                    <ul>
+                      <li>To explore correlations between fMRI connectivity metrics and clinical measures of fatigue severity</li>
+                      <li>To integrate structural MRI findings (e.g., lesion load, gray matter atrophy) with functional connectivity results to provide a comprehensive view of the neural underpinnings of fatigue in MS</li>
+                    </ul>
                 </ul>
                 <b>Contributors' skills:</b>
                 <br>
                 <ul>
-                  <li>expertise in python coding</li>
-                  <li>expertise with GUI development (optional)</li>
-                  <li>familiariy with neuroinformatics and related tools</li>
+                  <li>Python codind</li>
+                  <li>fMRI</li>
+                  <li>MRI segmentation</li>
                 </ul>
               </p>
             </div>
 
           </div>
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
-            <img src="images/projects/project2.png" class="img-fluid" alt="">
+            <img src="images/projects/project_generic.png" class="img-fluid" alt="">
           </div>
-        </div> --><!-- Project Item RIGHT-->
+        </div> <!-- Project Item RIGHT -->
 
         <hr>
 
