--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
           </div>
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/9" target="_blank">Exploring How Music Shapes Emotions in the Brain. A network connectivity analysis perspective on fMRI data.</a></h3>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/9" target="_blank">Exploring How Music Shapes Emotions in the Brain. A network connectivity analysis perspective on fMRI data</a></h3>
             <p>By <a href="https://github.com/mlionello" target="_blank">Matteo Lionello</a></p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj1">Description</a>
 
@@ -877,7 +877,6 @@
                 </ul>
                 <br>
                 <b>Goals for the BrainHack:</b>
-                <br>
                 <ul>
                   <li>Framework set up with fMRI data aligned to music features.</li>
                   <li>Preliminary connectivity and feature-to-network mappings complete.</li>
@@ -913,7 +912,6 @@
                 <br>
                 <br>
                 <b>Goals for the BrainHack:</b>
-                <br>
                 <ul>
                   <li>Primary Objective: To investigate differences in functional connectivity and network dynamics among:</li>
                     <ul>
@@ -942,6 +940,43 @@
             <img src="images/projects/project_generic.png" class="img-fluid" alt="">
           </div>
         </div> <!-- Project Item RIGHT -->
+
+        <hr>
+
+        <!--Project 3-->
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project3.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/10" target="_blank">NeuroInfer and Database update</a></h3>
+            <p>By Davide Coraci, Matteo Lionello & Sara Mazzuccato</p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj3">Description</a>
+
+            <div class="collapse" id='collapse_prj3'>
+              <p>
+                <br>
+                NeuroInfer (NI) is a software to support neuroscientists' inference on fMRI data. It implements a Bayesian approach and it is currently based on a dataset of more than 14,000 fMRI studies (shared with NeuroSynth).
+                The aim of the project is to update the database and, in particular, define a pipeline for extracting relevant information from the texts of fMRI studies (i.e., terms and coordinates of brain activation).
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Check the current version of NeuroInfer</li>
+                  <li>Define a flowchart for processing texts of fMRI studies</li>
+                  <li>Develop a pipeline to process texts</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Python (basics)</li>
+                  <li>Experience with API would be cool!</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+        </div> <!-- Project Item LEFT -->
 
         <hr>
 
