--- a/index.html
+++ b/index.html
@@ -741,10 +741,10 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
-        <p>Registration <b>is now open!</b></p>
+        <!-- <p>Registration <b>is now open!</b></p> -->
         <!-- <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p> -->
-        <p>Registration will be <b>open until 25/11/2024</b>.</p>
-        <!-- <p>Registration <b>is now closed.</b></p> -->
+        <!-- <p>Registration will be <b>open until 25/11/2024</b>.</p> -->
+        <p>Registration <b>is now closed.</b></p>
         <!-- <p>Email us if you want to try to get a late registration.</p> -->
       </div><!-- End Section Title -->
 
@@ -756,10 +756,10 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title reg-btn" title="Registration is now open!"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeTKq92mNCrwTCkhqD1CxR2sHfK4zMnjrvjHyX5mLoId8kEA/viewform?usp=sharing" target="_blank" class="stretched-link" style='background-color: orange'>Register</a></h4>
+                <h4 class="title reg-btn" title="Registration is now open!"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeTKq92mNCrwTCkhqD1CxR2sHfK4zMnjrvjHyX5mLoId8kEA/viewform?usp=sharing" target="_blank" class="stretched-link" style='background-color: grey'>Register</a></h4>
                 <!-- <p class="description">Register now using the google form.</p> -->
                 <!-- <p class="description">There are still <b>3 places available!</b></p> -->
-                <p class="description">Registration <b>is now open!</b></p>
+                <p class="description">Registration <b>is now closed.</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
@@ -837,6 +837,9 @@
         <br>
         Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this!</p>
         <p><b><a href="https://drive.google.com/file/d/1I8PQb1FDyXtRYeU_LaL7Nhab7dEzZdAo/view?usp=sharing" target="_blank">Click here to watch a short video about "How to write a project for the BrainHack"</a></b>, in which we discuss how a project should be conceived and project leaders' duties.</p>
+        <br>
+        <h4 style="color: red">Projects can be pre-registered and published on the website until 30/11/2024!</h4>
+        After this deadline, it will still be possible to propose a project during the 'project pitches' on day 1.
       </div><!-- End Section Title -->
 
       <div class="container submit d-flex flex-column align-items-center">
