--- a/index.html
+++ b/index.html
@@ -983,6 +983,48 @@
 
         <hr>
 
+        <!--Project 4-->
+         <div class="row gy-4 align-items-center projects-item">
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/11" target="_blank">Dreamcatcher: decoding dream-event in EEG data with multimodal language models and interpretability tools</a></h3>
+            <p>
+              by Lorenzo Bertiolini
+            </p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj4">Description</a>
+
+            <div class="collapse" id='collapse_prj4'>
+              <p>
+                <br>
+                In recent years, multimodal systems based on large language models (LLMs) have been successfully applied to encode and decode information from neurophysiological data. Most applications have focused on tracing and reconstructing images and language in the brain, using pictures, textual reports, and EEG data. While previous work has unveiled plausible spatial neural correlates of dream events, its time aspect remains elusive, In this project, we aim to trace dream events in EEG signals, using pre-trained LLMs and standard interpretability tools from the NLP and AI literature.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Develop a framework to pre-process EEG data having different formats for the same LLM</li>
+                  <li>Set up a training regime suitable to the available data</li>
+                  <li>Train and monitor a first set of models or toy examples</li>
+                  <li>Prepare analysis pipeline</li>
+                  <li>Analyse a first set of models</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Basic Python for text mining and analysis</li>
+                  <li>Python scientific, neuroscience, or ML (e,g., numpy, scikilearn, seabonr, mne, pytorch, hugging face)</li>
+                  <li>EEG/neuroscience data analysis knowledge</li>
+                  <li>ML/AI knowledge (even basic)</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project4.png" class="img-fluid" alt="">
+          </div>
+        </div> <!-- Project Item RIGHT -->
+
+        <hr>
+
       </div>
 
     </section><!-- End Projects Section -->
